# warcat-rs

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  roadmap.md
.github/: CONTRIBUTING.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_bin.md  bug_report_lib.md
.github/workflows/: build.yml  test.yml
doc/: README.md  cli_reference.md  compiling.md  conf.py  downloads.md  export_import.md  index.md  install.md  install_manual.md  integration.md  intro_to_cli.md  requirements.txt  setup.md  usage_examples.md
examples/: README.md  decode.rs  encode.rs
examples/c-sharp/: WarcatExample.sln  example.warc
examples/c-sharp/WarcatExample/: Decode.cs  Encode.cs  Message.cs  Program.cs  WarcatExample.csproj
examples/python/: decode.py  encode.py  message.py
misc/: release_digests.toml
misc/release_digests/: README.md  keys.toml  v0.1.0.toml  v0.2.0.toml  v0.3.0.toml  v0.3.1.toml  v0.3.2.toml  v0.3.3.toml  v0.3.4.toml
src/: app.rs  compress.rs  dataseq.rs  digest.rs  error.rs  extract.rs  fields.rs  header.rs  http.rs  io.rs  lib.rs  main.rs  parse.rs  read.rs  util.rs  verify.rs  warc.rs  write.rs
src/app/: arg.rs  common.rs  dump_help.rs  export.rs  extract.rs  filter.rs  format.rs  get.rs  import.rs  io.rs  list.rs  logging.rs  model.rs  progress.rs  self_.rs  verify.rs
src/compress/: decode.rs  encode.rs  zstd.rs
src/compress/zstd/: decode.rs  encode.rs
src/fields/: de.rs  ser.rs
src/header/: fields.rs
src/http/: h1.rs
src/http/h1/: codec.rs  error.rs  header.rs  recv.rs  send.rs
src/http/h1/codec/: chunked.rs  compress.rs
src/http/h1/header/: fields.rs  parse.rs
src/parse/: fields.rs  header_deliminator.rs  warc.rs
src/warc/: decode.rs  encode.rs
tests/: test_decode.rs  warc_generator.rs
xtask/: Cargo.toml  README.md
xtask/src/: digest.rs  dist_license.txt  dist_readme.txt  doc.rs  gh.rs  license.rs  main.rs  package.rs
