[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.18.1"
cargo-license = "0.6.1"
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls", "gzip", "json"] }
serde_json = "1.0.128"
tempfile = "3.13.0"
zip = { version = "2.2.0", default-features = false, features = ["deflate64", "deflate"] }