[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.86"
blake2 = "0.10.6"
blake3 = { version = "1.5.4", features = ["pure", "traits-preview"] }
cargo_metadata = "0.19.2"
cargo-license = "0.6.1"
cargo-license_cargo_metadata = { package = "cargo_metadata", version = "0.18.1"}
clap = { version = "4.5.16", features = ["derive"] }
data-encoding = "2.6.0"
digest = "0.10.7"
minisign = "0.7.8"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls", "gzip", "json"], optional = true }
rpassword = "7.3.1"
serde_json = "1.0.128"
sha2 = "0.10.8"
tempfile = "3.13.0"
toml_edit = "0.22.22"
zip = { version = "4.0.0", default-features = false, features = ["deflate64", "deflate"] }

[features]
default = []
bloat = ["dep:reqwest"]